--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "sensitive-words-recognizer"
 version = "0.1.0"
 authors = ["whiteCcinn <471113744@qq.com>"]
 edition = "2018"
-
+description = "A sensitive lexicon"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
